--- a/license-contract/package.json
+++ b/license-contract/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@openzeppelin/contracts": "^4.7.2",
     "ethlint": "^1.2.5",
+    "ganache": "^7.4.0",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.24"
   }
