update another_sample_app, edit navbar

--- a/another_sample_app/package.json
+++ b/another_sample_app/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0",
+    "react-loading": "^2.0.3",
     "web3": "^1.7.5"
   },
   "devDependencies": {
@@ -32,7 +33,7 @@
     "url": "^0.11.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
