--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.2",
     "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.34.0",
     "react-router-dom": "^6.3.0",
