--- a/sample_app/package.json
+++ b/sample_app/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "assert": "^2.0.0",
+    "autoprefixer": "^10.4.8",
     "constants-browserify": "^1.0.0",
     "crypto-browserify": "^3.12.0",
     "eslint": "^8.19.0",
@@ -25,10 +26,12 @@
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "react-app-rewired": "^2.2.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "tailwindcss": "^3.1.8",
     "url": "^0.11.0"
   },
   "scripts": {
