--- a/license-contract/package.json
+++ b/license-contract/package.json
@@ -14,7 +14,9 @@
   },
   "devDependencies": {
     "@openzeppelin/contracts": "^4.7.3",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "ethlint": "^1.2.5",
+    "fs-extra": "^10.1.0",
     "ganache": "^7.4.0",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.24"
